<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="create_post">Create post</string>
    <string name="add_comment">Add a comment to make it a quote-post(optional)</string>
    <string name="post">POST</string>
    <string name="repost">REPOST</string>
    <string name="quote">QUOTE</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="profile_my_posts">My Posts:</string>
    <string name="home_feed">Feed:</string>
    <string name="date_joined">"Date joined Posterr: "</string>
    <string name="number_of_original_posts">"Original Posts: "</string>
    <string name="number_of_reposts">"Reposts: "</string>
    <string name="number_of_quote_posts">"Quote-Posts: "</string>
    <string name="lorem_1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas vitae justo porttitor, tristique turpis ac, maximus dui. Aenean volutpat erat orci, in tincidunt nisi auctor in. Maecenas tincidunt pharetra lectus, non pretium nisi mollis ullamcorper. Fusce facilisis sed metus vitae egestas. Aenean gravida neque pulvinar odio cursus suscipit. Nunc lobortis erat enim, aliquet iaculis sem sollicitudin quis. Vivamus ante mauris, scelerisque nec mattis nec, luctus et est. Proin eu eros a lectus viverra porta. Pellentesque aliquam elementum quam, ut hendrerit elit finibus quis. Vivamus nec dui eu lectus scelerisque faucibus nec non ex.</string>
    <string name="lorem_2">Lorem ipsum</string>
    <string name="posted">" posted:"</string>
    <string name="reposted">" reposted from: "</string>
    <string name="quoted">" quoted from: "</string>
    <string name="characters_left">" characters left"</string>
</resources>