<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/originalPostContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:background="@color/grey_2"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/originalPostUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Rodrigo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/posted"
        android:textSize="11sp"
        app:layout_constraintStart_toEndOf="@id/originalPostUserName"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/originalPostRepostButton"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:background="@color/grey_2"
        android:contentDescription="@string/repost"
        android:scaleType="fitXY"
        android:src="@drawable/refresh"
        android:text="@string/repost"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/originalPostUserName" />

    <androidx.cardview.widget.CardView
        android:id="@+id/originalPostCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/originalPostUserName">

        <TextView
            android:id="@+id/originalPostTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            tools:text="@string/lorem_1" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>